# finance-web-app

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
docs/: ARCHITECTURE.md  DESIGN.md  DEVELOPMENT.md  OPERATIONS.md  ROADMAP.md
src/finance_web_app/application/services/: budget_item_service.py  budget_service.py  category_service.py  commitment_service.py  expense_service.py  finance_model_service.py  history_service.py  income_service.py  insights_service.py
src/finance_web_app/core/contracts/: budget_item_repository.py  budget_repository.py  category_repository.py  commitment_repository.py  errors.py  expense_repository.py  income_repository.py
src/finance_web_app/core/runtime/: app_factory.py  container.py
src/finance_web_app/domain/: calendar_math.py  effective_period.py  money.py  monthly_model.py  records.py  recurrence.py
src/finance_web_app/infrastructure/persistence/: base_repository.py  bootstrap.py  budget_item_repository.py  budget_repository.py  budget_repository_sqlite.py  category_repository.py  commitment_repository.py  connection.py  engine.py  expense_repository.py  income_repository.py  migrate.py  schema.sql
src/finance_web_app/migrations/: env.py  script.py.mako
src/finance_web_app/migrations/versions/: 5dc633e5fe76_add_commitment.py  601a6302441d_add_income_and_income_exception.py  61f25195c783_user_managed_categories_budget_items.py  7e38f73399b5_initial_schema.py  e7226a8c2497_add_expense.py
src/finance_web_app/web/: __init__.py
src/finance_web_app/web/blueprints/: api.py  budgets.py  categories.py  commitments.py  errors.py  expenses.py  home.py  income.py  summary.py
src/finance_web_app/web/forms/: budget_form.py  budget_item_form.py  category_form.py  commitment_form.py  expense_form.py  income_form.py
src/finance_web_app/web/rendering/: json_response.py  template_context.py
src/finance_web_app/web/static/css/: app.css
src/finance_web_app/web/static/js/: budgets.js  commitment_form.js  dashboard.js  expenses.js  modal.js
src/finance_web_app/web/templates/: 404.html  base.html  budget_detail.html  budgets.html  categories.html  commitments.html  expenses.html  income.html  index.html  summary.html
tests/: conftest.py
tests/integration/persistence/: test_budget_item_repository_sqlite.py  test_budget_repository_sqlite.py  test_category_repository_sqlite.py  test_commitment_repository.py  test_expense_repository.py  test_income_repository.py  test_migrations.py  test_schema.py
tests/integration/web/: test_budgets_routes.py  test_categories_routes.py  test_commitments_routes.py  test_dashboard_routes.py  test_expenses_routes.py  test_income_routes.py
tests/unit/application/: test_budget_item_service.py  test_budget_service.py  test_category_service.py  test_commitment_service.py  test_expense_service.py  test_finance_model_service.py  test_history_service.py  test_income_service.py  test_insights_service.py
tests/unit/core/contracts/: test_budget_item_repository_protocol.py  test_budget_repository_protocol.py  test_category_repository_protocol.py  test_commitment_repository_protocol.py  test_expense_repository_protocol.py  test_income_repository_protocol.py
tests/unit/domain/: test_calendar_math.py  test_effective_period.py  test_money.py  test_monthly_model.py  test_recurrence.py
tests/unit/web/: test_json_response.py
tests/unit/web/forms/: test_budget_form.py  test_budget_item_form.py  test_category_form.py  test_commitment_form.py  test_expense_form.py  test_income_form.py
