[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance_web_app"
version = "0.0.1"
description = "Personal-finance tracker: budgets, expenses, recurring commitments, and recurring income with a monthly dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ed Eden-Rump" }]
keywords = ["finance", "budget", "flask", "sqlite"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "flask>=3.0",
    "sqlmodel>=0.0.38",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/nested-space/finance-web-app"
Issues = "https://github.com/nested-space/finance-web-app/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["finance_web_app*"]

[tool.setuptools.package-data]
finance_web_app = [
    "migrations/*.py",
    "migrations/*.mako",
    "migrations/versions/*.py",
    "web/templates/*.html",
    "web/static/css/*.css",
    "web/static/js/*.js",
    "web/static/fonts/*.woff2",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"
# Alembic env + generated migration scripts are boilerplate; don't lint/format them.
extend-exclude = ["src/finance_web_app/migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "S101", # assert is allowed (used in pytest)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "unit: pure-Python unit tests (no I/O, no DB)",
    "integration: tests that touch SQLite and/or the Flask test client",
]

[tool.mypy]
mypy_path = "src"
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
files = ["src", "tests"]
# Alembic's env.py and generated migration scripts are boilerplate, not
# hand-maintained typed code; exclude them rather than annotate generated files.
exclude = ['src/finance_web_app/migrations/']

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true
